--- a/textFormatting.html
+++ b/textFormatting.html
@@ -7,40 +7,44 @@
 </head>
 <body bgcolor="skyblue" text="">
     
-    <!-- text formtting -->
-
-    <!-- <p>Royal</p> -->
-    <!-- Royal
-    <b>Royal</b>
-    <strong>Royal</strong>
-    <i>Royal</i>
-    <em>Royal</em>
-    <u>Royal</u>
-    <ins>Royal</ins>
-    <mark>Royal</mark>
-    <del>Royal</del>
-    <strike>Royal</strike>
-    <s>Royal</s>
-    <q>Royal</q>
-    <big>Royal</big>
-    <small>Royal</small>
-
-    h<sub>2</sub>o
-
-    2x<sup>3</sup>
+    <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+         Veritatis voluptatibus maiores provident distinctio ducim
+         us! Reiciendis, et harum? Aspernatur, minima provident quia
+          consectetur debitis iusto eligendi alias, distinctio repudiandae reprehenderit dolores?</p> -->
 
 
+          <!-- text formatting -->
 
-    <p>Lorem <u><i><b><mark>ipsum dolor </mark></b></i></u>sit amet.</p> -->
+          <!-- Royal
+          <b>Royal</b>
+          <strong>Royal</strong>
+          <i>Royal</i>
+          <em>Royal</em>
+          <u>Royal</u>
+          <ins>Royal</ins>
+          <mark>Royal</mark>
+          <del>Royal</del>
+          <strike>Royal</strike>
+          <s>Royal</s>
+          <q>Royal</q>
+          <big>Royal</big>
+          <small>Royal</small>
 
-<font size="5" color="blue" face="Gabriola">
-    <h1 align="center">Royal</h1>
+          h<sub>2</sub>o
 
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et ratione ad voluptate iste dolores, totam in doloribus ullam eveniet</font> placeat doloremque? Nulla blanditiis quas, accusamus possimus alias perspiciatis tenetur repudiandae!</p>
-
-    <h3>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Commodi veniam sint libero magnam? Sed vitae excepturi molestiae ex, odio aspernatur consequatur sint doloremque commodi odit facere quo deserunt, minus veniam?</h3>
+          2x<sup>3</sup> -->
 
 
+          <!-- <p align="center">Lorem ipsum dolor sit amet.</p>
+          <p align="right">Lorem ipsum dolor sit amet.</p> -->
+
+
+
+        <font color="white" size="5" face="Courier">  <h1 align="center">Royal</h1></font>
+
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum fuga fugit possimus rem adipisci harum quam dolores a soluta, dolorem ad non architecto voluptatem itaque quae? Eligendi accusantium natus labore?</p>
+
+          <pre>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo, eos minus. Iure dolorem libero corrupti perferendis aliquam. Itaque, perspiciatis veritatis temporibus minus quisquam, qui quis voluptates iste quibusdam neque reprehenderit.</pre>
 
 </body>
 </html>
