--- a/image.html
+++ b/image.html
@@ -43,11 +43,11 @@
  <!-- Fav singer  -->
 
 
- <center>
+ <!-- <center>
             <b>Royal</b>
             <h1>Royal</h1>
             <p>Lorem ipsum dolor sit amet.</p>
-        </center>
+        </center> -->
 
 </body>
 </html>
