--- a/List.html
+++ b/List.html
@@ -107,6 +107,33 @@
     </ol> -->
 
 
+    <!-- <ol>
+        <li>Fruits
+            <ol>
+                <li></li>
+            </ol>
+        </li>
+        <li>vegetabes</li>
+    </ol> -->
+
+
+
+
+    <!-- defination list  -->
+
+    <!-- <dd>Defination data</dd> <dt>Defination title</dt> -->
+
+
+    <dl>
+        <dt>Froentend</dt>
+        <dd>Html</dd>
+        <dd>Css</dd>
+        <dd>JavaScript</dd>
+        <dt>backend</dt>
+        <dd>Java</dd>
+        <dd>Node</dd>
+    </dl>
+
 
 
 </body>
