--- a/marquee.html
+++ b/marquee.html
@@ -14,9 +14,9 @@
         Royal technosoft
     </marquee> -->
 
-    <!-- <marquee behavior="" direction="">
+    <marquee behavior="" direction="">
         <h1>Royal technosoft</h1>
-    </marquee> -->
+    </marquee>
 
 </body>
 </html>
