--- a/Form.html
+++ b/Form.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     
-    <form action="">
+    <form action="Thankyou.html" method="post">
         <table>
             <tr>
                 <td>Name</td>
